objects/Mobile_Phone__c.object
<CustomObject>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_Field_1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Test Field #1</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Mobile Phone</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MBL-{0000}</displayFormat>
        <label>Mobile Phone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mobile Phones</pluralLabel>
    <recordTypes>
        <fullName>Record_Type_A</fullName>
        <active>true</active>
        <label>Record Type A</label>
    </recordTypes>
    <recordTypes>
        <fullName>Record_Type_B</fullName>
        <active>true</active>
        <label>Record Type B</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>